--- a/NetBank.UI.Mobile/NetBank.UI.Mobile.csproj
+++ b/NetBank.UI.Mobile/NetBank.UI.Mobile.csproj
@@ -54,6 +54,9 @@
 
 	<ItemGroup>
 	  <Folder Include="Pages\" />
+	  <MauiXaml Update="Pages\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
