ajustes no projeto

--- a/NetBank.UI.Mobile/NetBank.UI.Mobile.csproj
+++ b/NetBank.UI.Mobile/NetBank.UI.Mobile.csproj
@@ -59,7 +59,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\ComprovanteTransacaoPage.xaml.cs">
+	    <DependentUpon>ComprovanteTransacaoPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Pages\CadastroPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\ComprovanteTransacaoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\DetalhesContaPage.xaml">
